<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nameTV"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/your_nameHInt"
                    android:inputType="textPersonName"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone_noText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_numberHint"
                    android:inputType="phone"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/editTextPax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/paxHint"
                    android:inputType="number"
                    android:textSize="15dp" />

            </LinearLayout>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:minDate="06/01/2020" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/textViewSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/smokingText" />

            <CheckBox
                android:id="@+id/checkBoxsmoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/smoking_areaCB" />

<!--            <CheckBox-->
<!--                android:id="@+id/checkBoxNon"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/non_smoking_areaCB"/>-->

            <TextView
                android:id="@+id/textViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/beforeText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReserve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_dropdown_dark_frame"
                    android:textColor="@android:color/background_light"
                    android:text="@string/reserveText" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_dropdown_dark_frame"
                    android:textColor="@android:color/background_light"
                    android:text="@string/resetText" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
